Fixed spacing issues with h1.

--- a/css/main.css
+++ b/css/main.css
@@ -121,7 +121,7 @@ h2,
 }
 
 h1 {
-  font-size: 6.75em;
+  font-size: 6.2em;
 }
 
 .title {
